<resources>
    <string name="app_name">Alias</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_list_data">ListDataActivity</string>
    <string name="title_activity_current_score">CurrentScoreActivity</string>
    <string name="title_activity_round_summary">RoundSummaryActivity</string>

    <!--Main activity -->
    <string name="play">Igraj</string>
    <string name="settings">Postavke</string>
    <string name="rules">Pravila</string>
    <string name="exit">Izlaz</string>

    <!--Gameplay activity -->
    <string name="start_round">Start</string>
    <string name="current_round_score">Trenutno bodova u rundi: </string>
    <string name="correct">Točno</string>
    <string name="pass">Dalje</string>

    <!--Pop up window -->
    <string name="player1">Igrač 1:</string>
    <string name="player2">Igrač 2:</string>
    <string name="insert_name">Upiši ime</string>
    <string name="save">Spremi</string>

    <!--Setting activity-->
    <string name="round_duration">Trajanje runde</string>
    <string name="score_to_win">Bodova za pobjedu</string>
    <string name="default_round_duration">60</string>
    <string name="default_score_to_win">30</string>

    <!--Rules activity-->
    <string name="rules_desc">Igra Alias igra se u parovima. Jedan igrač drugome objašnjava pojmove onako
        kako mu izlaze na ekranu. Cilj je u zadanom vremenu pogoditi što više pojmova. Zabranjeno je koristiti korijen riječi prilikom objašnjavanja.
    </string>
    <string name="game_summary">Rezultat:</string>
    <string name="main_menu">Glavni meni</string>
    <string name="start_game">Započni igru</string>
    <string name="add_team">Dodaj tim</string>


</resources>
