<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_button"
            android:layout_margin="10dp"
            android:text="@string/play" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_button"
            android:layout_margin="10dp"
            android:text="@string/settings" />


        <Button
            android:id="@+id/button_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_button"
            android:layout_margin="10dp"
            android:text="@string/rules" />


        <Button
            android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_button"
            android:layout_margin="10dp"
            android:text="@string/exit" />

        </LinearLayout>


    <include layout="@layout/content_main" />

</android.support.design.widget.CoordinatorLayout>