<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_up_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/player1"/>

        <EditText
            android:id="@+id/first_player_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/player2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/player2"/>

        <EditText
            android:id="@+id/second_player_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/save" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>